# openapi/restapi/operations/server/game_urlbuilder.go
@@ -11,15 +11,15 @@ import (
 	golangswaggerpaths "path"
 )
 
-// StartURL generates an URL for the start operation
-type StartURL struct {
+// GameURL generates an URL for the game operation
+type GameURL struct {
 	_basePath string
 }
 
 // WithBasePath sets the base path for this url builder, only required when it's different from the
 // base path specified in the swagger spec.
 // When the value of the base path is an empty string
-func (o *StartURL) WithBasePath(bp string) *StartURL {
+func (o *GameURL) WithBasePath(bp string) *GameURL {
 	o.SetBasePath(bp)
 	return o
 }
@@ -27,15 +27,15 @@ func (o *StartURL) WithBasePath(bp string) *StartURL {
 // SetBasePath sets the base path for this url builder, only required when it's different from the
 // base path specified in the swagger spec.
 // When the value of the base path is an empty string
-func (o *StartURL) SetBasePath(bp string) {
+func (o *GameURL) SetBasePath(bp string) {
 	o._basePath = bp
 }
 
 // Build a url path and query string
-func (o *StartURL) Build() (*url.URL, error) {
+func (o *GameURL) Build() (*url.URL, error) {
 	var _result url.URL
 
-	var _path = "/Start"
+	var _path = "/Game"
 
 	_basePath := o._basePath
 	_result.Path = golangswaggerpaths.Join(_basePath, _path)
@@ -44,7 +44,7 @@ func (o *StartURL) Build() (*url.URL, error) {
 }
 
 // Must is a helper function to panic when the url builder returns an error
-func (o *StartURL) Must(u *url.URL, err error) *url.URL {
+func (o *GameURL) Must(u *url.URL, err error) *url.URL {
 	if err != nil {
 		panic(err)
 	}
@@ -55,17 +55,17 @@ func (o *StartURL) Must(u *url.URL, err error) *url.URL {
 }
 
 // String returns the string representation of the path with query string
-func (o *StartURL) String() string {
+func (o *GameURL) String() string {
 	return o.Must(o.Build()).String()
 }
 
 // BuildFull builds a full url with scheme, host, path and query string
-func (o *StartURL) BuildFull(scheme, host string) (*url.URL, error) {
+func (o *GameURL) BuildFull(scheme, host string) (*url.URL, error) {
 	if scheme == "" {
-		return nil, errors.New("scheme is required for a full url on StartURL")
+		return nil, errors.New("scheme is required for a full url on GameURL")
 	}
 	if host == "" {
-		return nil, errors.New("host is required for a full url on StartURL")
+		return nil, errors.New("host is required for a full url on GameURL")
 	}
 
 	base, err := o.Build()
@@ -79,6 +79,6 @@ func (o *StartURL) BuildFull(scheme, host string) (*url.URL, error) {
 }
 
 // StringFull returns the string representation of a complete url
-func (o *StartURL) StringFull(scheme, host string) string {
+func (o *GameURL) StringFull(scheme, host string) string {
 	return o.Must(o.BuildFull(scheme, host)).String()
 }
